--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
+  "homepage":"http://ignite-feed.github.io/website",
   "name": "01-fundamentos-reactjs",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "predeploy":"npm run build ",
+    "deploy":"gh-pages -d build ",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.29.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -17,6 +21,7 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.0.1",
+    "gh-pages": "^4.0.0",
     "vite": "^3.0.7"
   }
 }
